# Nexus

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  nexus.bat  nexus.ps1  nexus.sh  openapi.json  pyproject.toml
app/: config.py  main.py
app/api/: deps.py
app/config/: crawl_concurrency.yaml
app/crawlers/: base.py  registry.py
app/db/: bootstrap.py  client.py  pool.py
app/scheduler/: jobs.py  manager.py  pipeline.py
app/schemas/: aminer.py  article.py  common.py  crawl_log.py  dimension.py  event.py  faculty.py  institution.py  llm_tracking.py  paper.py  (+8 more)
config/: domains.yaml  event_taxonomy.yaml  project_taxonomy.yaml
data/: index.json
docs/: CrawlStatus.md  SourceOverview.md  TODO.md  architecture.md
frontend/: README.md  package-lock.json  package.json  start-dev.cmd
scripts/: README.md  bootstrap_db.py  generate_openapi.py
sources/: README.md  beijing_policy.yaml  industry.yaml  national_policy.yaml  personnel.yaml  scholar-cas.yaml  scholar-fudan.yaml  scholar-nju.yaml  scholar-pku.yaml  scholar-ruc.yaml  scholar-sjtu.yaml  scholar-tsinghua.yaml  scholar-ustc.yaml  scholar-zju.yaml  technology.yaml  twitter.yaml  universities-ai-institutes.yaml  universities-news.yaml  university_leadership_sources.yaml  学术信源.md
tests/: test_api_contracts.py  test_db_bootstrap.py  test_institution_hierarchy_counts.py  test_institution_org_type_aliases.py  test_policy_source_scope.py  test_research_areas_validation.py  test_run_all_refactor.py  test_scholar_multi_tag_filters.py  test_selector_parser.py  test_source_catalog.py  test_source_filter.py
(+218 files in other folders)
